Copy surefire configs to failsafe as well.
  - Also specify UTF-8 encoding for a few plugins that always complain about the lack of a specific setting.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1595693 13f79535-47bb-0310-9956-ffa450edef68